--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 bend-lang = { git = "https://github.com/HigherOrderCO/Bend", branch = "main" }
 dashmap = "5.5.0"
+tokio = { version = "1.32.0", features = ["full"] }
+log = "0.4.20"
+env_logger = "0.10.0"
