--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "subnet_vm"
+path = "src/main.rs"
 
 [dependencies]
-bend-lang = { git = "https://github.com/HigherOrderCO/Bend", branch = "main" }
+bend-lang = { git = "https://github.com/unicornultralabs/Bend", branch = "main" }
 dashmap = "5.5.0"
 tokio = { version = "1.32.0", features = ["full"] }
 log = "0.4.20"
