--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ name = "subnet_vm"
 path = "src/main.rs"
 
 [dependencies]
-bend-lang = { path = "../Bend" }
+bend-lang = { git = "https://github.com/unicornultralabs/Bend", branch = "main" }
 dashmap = "5.5.0"
 tokio = { version = "1.32.0", features = ["full"] }
 log = "0.4.20"
