--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ name = "subnet_vm"
 path = "src/main.rs"
 
 [dependencies]
-# bend-lang = { git = "https://github.com/unicornultralabs/Bend", branch = "main" }
-bend-lang = { path = "../Bend" }
+bend-lang = { git = "https://github.com/unicornultralabs/Bend", branch = "main" }
+# bend-lang = { path = "../Bend" }
 dashmap = "5.5.0"
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-tungstenite = "0.16"
