--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ hvm = "=2.0.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures = "0.3"
+redis = { version = "0.19.0", features = ["tls"] }
+redis-async = { version = "0.17.1", features = ["with-rustls"] }
+url = "2.5.0"
+anyhow = "1.0.75"
